<?xml version="1.0"?>
<package>
  <name>wheeled_robin_viz</name>
  <version>1.0.0</version>
  <description>Catkin meta-package for wheeled_robin_viz</description>
  <maintainer email="joh.mayr@jku.at">Johannes Mayr</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/wheeled_robin_viz</url>
  <url type="repository">https://github.com/turtlebot/wheeled_robin_viz</url>
  <url type="bugtracker">https://github.com/turtlebot/wheeled_robin_viz/issues</url>
  <author email="joh.mayr@jku.at">Johannes Mayr</author>
  <author email="klemens.springer@jku.at">Klemens Springer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>wheeled_robin_rviz_launchers</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>